--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "tsup",
     "dev": "bun run build && node dist/mocklite.cjs dev",
     "start": "node dist/mocklite.cjs",
+    "ui:build": "cd ui && npm run build",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
