--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "build": "tsup",
     "dev": "bun run build && node dist/mocklite.cjs dev",
     "start": "node dist/mocklite.cjs",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "postversion": "git push --follow-tags && npm publish --access public"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
